<resources>
	<string name="app_name">Health App</string>

    <string name="menu_calories_list">Calories List</string>
	<string name="menu_food_recipes">Foods Recipes</string>
	<string name="menu_my_diets">My Diets</string>
	<string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
	<string name="welcome_to_my_app">Welcome to the health app</string>
	<!-- TODO: Remove or change this placeholder text -->
</resources>
