<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/btnContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:layout_margin="15dp">

		<TextView
			android:id="@+id/text_home"
			android:textColor="@color/colorPrimary"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="15dp"
			android:fontFamily="@font/aclonica"
			android:text="@string/welcome_to_my_app"
			android:textAlignment="center"
			android:textStyle="bold"
			android:textSize="20sp" />

		<Button
			android:id="@+id/btnCaloriesList"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/menu_calories_list"
			android:textSize="@dimen/large_btn_text_size"
			app:cornerRadius="@dimen/large_btn_radius"
			app:icon="@drawable/ic_menu_calories"
			app:iconPadding="@dimen/large_btn_icon_padding"
			app:iconSize="@dimen/large_btn_icon_size" />

		<Button
			android:id="@+id/btnFoodsRecipes"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/large_btn_margin_top"
			android:text="@string/menu_food_recipes"
			android:textSize="@dimen/large_btn_text_size"
			app:cornerRadius="@dimen/large_btn_radius"
			app:icon="@drawable/ic_menu_foods_recipes"
			app:iconPadding="@dimen/large_btn_icon_padding"
			app:iconSize="@dimen/large_btn_icon_size" />

		<Button
			android:id="@+id/btnMyDiets"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/large_btn_margin_top"
			android:text="@string/menu_my_diets"
			android:textSize="@dimen/large_btn_text_size"
			app:cornerRadius="@dimen/large_btn_radius"
			app:icon="@drawable/ic_menu_my_diet"
			app:iconPadding="@dimen/large_btn_icon_padding"
			app:iconSize="@dimen/large_btn_icon_size" />

		<Button
			android:id="@+id/btnSettings"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/large_btn_margin_top"
			android:text="@string/menu_settings"
			android:textSize="@dimen/large_btn_text_size"
			app:cornerRadius="@dimen/large_btn_radius"
			app:icon="@drawable/ic_menu_settings"
			app:iconPadding="@dimen/large_btn_icon_padding"
			app:iconSize="@dimen/large_btn_icon_size" />

		<Button
			android:id="@+id/btnAboutMe"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/large_btn_margin_top"
			android:text="@string/menu_about"
			android:textSize="@dimen/large_btn_text_size"
			app:cornerRadius="@dimen/large_btn_radius"
			app:icon="@drawable/ic_menu_about"
			app:iconPadding="@dimen/large_btn_icon_padding"
			app:iconSize="@dimen/large_btn_icon_size" />
	</LinearLayout>


</RelativeLayout>
